--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,4 +38,9 @@
             android:text="@string/stop_read">
         </Button>
     </LinearLayout>
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="20sp"
+        android:id="@+id/progressBar"/>
 </LinearLayout>
