--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,22 +25,39 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="readStart"
-            android:text="@string/start_read">
-        </Button>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="readStop"
-            android:text="@string/stop_read">
-        </Button>
+        <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:onClick="readStart"-->
+        <!--android:text="@string/start_read">-->
+        <!--</Button>-->
+        <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:onClick="readStop"-->
+        <!--android:text="@string/stop_read">-->
+        <!--</Button>-->
     </LinearLayout>
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="20sp"
-        android:id="@+id/progressBar"/>
+        android:id="@+id/progressBar"
+        android:indeterminate="false"/>
+    <HorizontalScrollView android:layout_width="fill_parent"
+                          android:layout_height="fill_parent"
+                          android:id="@+id/amplitudeSCroll"
+
+
+        >
+        <LinearLayout android:layout_width="fill_parent"
+                      android:layout_height="fill_parent"
+                      android:id="@+id/amplitudeLayout"
+                      android:orientation="horizontal" android:gravity="bottom">
+
+
+        </LinearLayout>
+
+
+    </HorizontalScrollView>
 </LinearLayout>
