--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,25 +39,36 @@
         <!--</Button>-->
     </LinearLayout>
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="20sp"
-        android:id="@+id/progressBar"
         android:indeterminate="false"/>
-    <HorizontalScrollView android:layout_width="fill_parent"
+    <HorizontalScrollView android:id="@+id/amplitudeSCrollTOP"
+                          android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
-                          android:id="@+id/amplitudeSCroll"
-
-
+                          android:layout_weight="1"
         >
-        <LinearLayout android:layout_width="fill_parent"
-                      android:layout_height="fill_parent"
-                      android:id="@+id/amplitudeLayout"
-                      android:orientation="horizontal" android:gravity="bottom">
-
-
+        <LinearLayout
+            android:id="@+id/amplitudeLayoutTOP"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="bottom"
+            android:orientation="horizontal">
         </LinearLayout>
-
-
     </HorizontalScrollView>
+    <HorizontalScrollView android:id="@+id/amplitudeSCrollBOTTOM"
+                          android:layout_width="fill_parent"
+                          android:layout_height="fill_parent"
+                          android:layout_weight="1"
+        >
+        <LinearLayout
+            android:id="@+id/amplitudeLayoutBOTTOM"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="top"
+            android:orientation="horizontal">
+        </LinearLayout>
+    </HorizontalScrollView>
+
 </LinearLayout>
