--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,22 +22,6 @@
             android:text="@string/stop_record">
         </Button>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:onClick="readStart"-->
-        <!--android:text="@string/start_read">-->
-        <!--</Button>-->
-        <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:onClick="readStop"-->
-        <!--android:text="@string/stop_read">-->
-        <!--</Button>-->
-    </LinearLayout>
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -46,7 +30,7 @@
         android:indeterminate="false"/>
     <HorizontalScrollView android:id="@+id/amplitudeSCrollTOP"
                           android:layout_width="fill_parent"
-                          android:layout_height="fill_parent"
+                          android:layout_height="0dp"
                           android:layout_weight="1"
         >
         <LinearLayout
@@ -57,18 +41,6 @@
             android:orientation="horizontal">
         </LinearLayout>
     </HorizontalScrollView>
-    <HorizontalScrollView android:id="@+id/amplitudeSCrollBOTTOM"
-                          android:layout_width="fill_parent"
-                          android:layout_height="fill_parent"
-                          android:layout_weight="1"
-        >
-        <LinearLayout
-            android:id="@+id/amplitudeLayoutBOTTOM"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="top"
-            android:orientation="horizontal">
-        </LinearLayout>
-    </HorizontalScrollView>
+
 
 </LinearLayout>
