--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:indeterminate="false"/>
     <HorizontalScrollView android:id="@+id/amplitudeSCrollTOP"
                           android:layout_width="fill_parent"
-                          android:layout_height="0dp"
+                          android:layout_height="fill_parent"
                           android:layout_weight="1"
         >
         <LinearLayout
@@ -38,6 +38,19 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:gravity="bottom"
+            android:orientation="horizontal">
+        </LinearLayout>
+    </HorizontalScrollView>
+    <HorizontalScrollView android:id="@+id/amplitudeSCrollBOTTOM"
+                          android:layout_width="fill_parent"
+                          android:layout_height="fill_parent"
+                          android:layout_weight="1"
+        >
+        <LinearLayout
+            android:id="@+id/amplitudeLayoutBOTTOM"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="top"
             android:orientation="horizontal">
         </LinearLayout>
     </HorizontalScrollView>
