--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="amplitude">#3351e9</color>
     <color name="maxAmplitude">#e93333</color>
+    <color name="tab">#bcfabc</color>
 </resources>
