--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,14 @@
             android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:onClick="recordStart"
+            android:onClick="onRecorsStartClick"
             android:text="@string/start_record">
         </Button>
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:onClick="recordStop"
+            android:onClick="onRecordStopClick"
             android:text="@string/stop_record">
         </Button>
 
@@ -76,15 +76,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:background="@color/tab">
+        android:background="@color/tab"
+        android:fillViewport="true"
+        android:id="@+id/tabScroll">
         <LinearLayout
-            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top"
-            android:orientation="horizontal"
-            tools:ignore="ScrollViewSize">
+            android:orientation="horizontal">
+            <LinearLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="top"
+                android:orientation="horizontal"
+                tools:ignore="ScrollViewSize">
+            </LinearLayout>
+            <Space
+                android:layout_width="30dp"
+                android:layout_height="match_parent"/>
         </LinearLayout>
+
     </HorizontalScrollView>
 
 
