+ дохера всего. Ваще дохера всего

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="amplitude">#3351e9</color>
     <color name="maxAmplitude">#e93333</color>
     <color name="tab">#bcfabc</color>
+    <color name="wer">#01FFEE</color>
+    <color name="colorPrimary2">#7b3f51b5</color>
 </resources>
