--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_weight="9">
         <Button
+            android:id="@+id/button_start_record"
             android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -19,6 +20,8 @@
             android:text="@string/start_record">
         </Button>
         <Button
+            android:id="@+id/button_stop_record"
+            android:enabled="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -76,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:background="@color/tab"
+        android:background="@color/colorAccent"
         android:fillViewport="true"
         android:id="@+id/tabScroll">
         <LinearLayout
@@ -90,6 +93,7 @@
                 android:gravity="top"
                 android:orientation="horizontal"
                 tools:ignore="ScrollViewSize">
+
             </LinearLayout>
             <Space
                 android:layout_width="30dp"
