--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="tab">#bcfabc</color>
     <color name="wer">#01FFEE</color>
     <color name="colorPrimary2">#7b3f51b5</color>
+    <color name="alternative_note">#cf72ce57</color>
+    <color name="changing_note">#ded43638</color>
+    <color name="empty_note">#00ffffff</color>
 </resources>
