* вернул все назад. какашка

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,12 +30,12 @@
             android:text="@string/stop_record">
         </Button>
 
-        <ImageView
-            android:id="@+id/text_note"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="@color/empty_note"/>
+        <!--     <ImageView
+                 android:id="@+id/text_note"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="2"
+                 android:background="@color/empty_note"/>-->
 
         <!--<SurfaceView
             android:layout_weight="2"
@@ -44,22 +44,22 @@
             android:name="layout.FreqAndNoteFragment"
             tools:layout="@layout/fragment_freq_and_note"
             android:id="@+id/freq_note_fragment"/>-->
-        <!--        <TextView
-                    android:layout_weight="2"
+        <TextView
+            android:layout_weight="3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:id="@+id/a110" />
                 <TextView
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:textColor="#cc2424"
                     android:textSize="20sp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:id="@+id/note"
-                    android:layout_gravity="end"/>-->
+                    android:layout_gravity="end"/>
     </LinearLayout>
 
     <HorizontalScrollView android:id="@+id/amplitudeSCrollTOP"
