--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,17 @@
             android:onClick="onRecordStopClick"
             android:text="@string/stop_record">
         </Button>
+        <Button
+            android:textSize="12sp"
+            android:id="@+id/button_audio_control"
+            android:background="@android:drawable/ic_media_play"
+            android:enabled="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:onClick="onAudioClick"
+            >
+        </Button>
 
         <!--     <ImageView
                  android:id="@+id/text_note"
